backend-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: neoxus18/urstorie-backend-repo:26b73d2
        ports:
        - containerPort: 7000  # Modifier le port pour correspondre au port de ton API
      imagePullSecrets:
        - name: docker-hub-secret
