frontend.deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app.kubernetes.io/name: vite-app
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: auth-app
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: vite-app
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: auth-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vite-app
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: auth-app
    spec:
      containers:
        - name: frontend
          image: neoxus18/front-end-urstorie:cda1fbf
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: docker-hub-secret
