backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 7000   # Port sur lequel ton service sera exposé
      targetPort: 7000  # Port sur lequel ton conteneur Docker écoute
  type: ClusterIP  # Utilisation d'un service de type ClusterIP pour une exposition interne via Ingress
