ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxysetheader Upgrade $httpupgrade;
        proxyhttpversion 1.1;
        proxysetheader X-Forwarded-Host $httphost;
        proxysetheader X-Forwarded-Proto $scheme;
        proxysetheader X-Forwarded-For $remoteaddr;
        proxysetheader Host $host;
        proxysetheader Connection "upgrade";
        proxycachebypass $httpupgrade;
        }
  name: "ingress"
spec:
  rules:
  - host: urstorie.com
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: backend-service
            port:
              number: 7000
        path: /api
        pathType: Prefix
  tls:
  - hosts:
    - urstorie.com
    secretName: letsencrypt-prod
status:
  loadBalancer:
    ingress:
    - hostname: urstorie.com
